Refactorización del código para correcta legibilidad

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,21 +80,22 @@ nav.scrolled .navbar-nav .nav-link {
 /* ------------------------------------------------------------------------------------------------------- */
 
 /* Imagen hero */
-.hero{
+.heroe {
     padding: 0;
     margin: 0;
     overflow: hidden;
     position: relative;
     height: 100vh;
 }
-.hero-image {
+
+.heroImage {
     width: 100%;
     height: 100vh;
     object-fit: cover;
     position: relative;
 }
 
-.hero-text {
+.heroText {
     white-space: nowrap;
     position: absolute;
     top: 50%;
@@ -107,12 +108,12 @@ nav.scrolled .navbar-nav .nav-link {
 
 }
 
-.hero-text>h1 {
+.heroText > h1 {
     font-size: 4.5em;
     color: #FFD700;
 }
 
-.hero-text>p {
+.heroText > p {
     font-size: 2.5em;
     color: #ffffff;
 }
@@ -205,7 +206,7 @@ section .card-text {
 
 
 /* Carrusel */
-.carousel-image {
+.carouselImage {
     height: 700px;
     object-fit: cover;
 }
@@ -214,11 +215,11 @@ section .card-text {
     object-fit: cover;
 }
 
-.carousel-text {
+.carouselText {
     font-family: 'Courier New', Courier, monospace;
 }
 
-.carousel-text h1 {
+.carouselText h1 {
     -webkit-transition: 0.5s ease-in-out;
     -moz-transition: 0.5s ease-in-out;
     -ms-transition: 0.5s ease-in-out;
@@ -235,7 +236,7 @@ section .card-text {
     letter-spacing: 2px;
 }
 
-.carousel-text h1:hover {
+.carouselText h1:hover {
     color: #FFD700;
     -webkit-text-shadow: 0 0 10px #D4AF37, 0 0 50px #FFD700;
     -moz-text-shadow: 0 0 10px #D4AF37, 0 0 50px #FFD700;
@@ -270,16 +271,16 @@ footer a:hover {
 
 /*Más pequeño*/
 @media (max-width: 392.9px) {
-    .hero-text>h1 {
+    .heroText > h1 {
         font-size: 2em;
     }
 
-    .hero-text>p {
+    .heroText > p {
         font-size: 0.9em;
         font-family: 'Courier New', Courier, monospace;
     }
 
-    .carousel-image {
+    .carouselImage {
         height: 400px;
     }
     .titulo{
@@ -293,7 +294,7 @@ footer a:hover {
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .boton-categoria {
+    .botonCategoria {
         width: 30%; /* Ajusta el ancho para que quepan 3 botones en una fila */
         padding: 5px 10px; /* Reduce el padding */
         font-size: 1em; /* Ajusta el tamaño de la fuente */
@@ -304,16 +305,16 @@ footer a:hover {
 
 /*IPHONE 8*/
 @media (min-width: 393px) and (max-width: 767.9px) {
-    .hero-text>h1 {
+    .heroText > h1 {
         font-size: 2em;
     }
 
-    .hero-text>p {
+    .heroText > p {
         font-size: 0.9em;
         font-family: 'Courier New', Courier, monospace;
     }
 
-    .carousel-image {
+    .carouselImage {
         height: 400px;
     }
     section .text-center h2{
@@ -324,7 +325,7 @@ footer a:hover {
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .boton-categoria {
+    .botonCategoria {
         text-align: center;
         width: 30%; /* Ajusta el ancho para que quepan 3 botones en una fila */
         padding: 5px 10px; /* Reduce el padding */
@@ -335,36 +336,36 @@ footer a:hover {
 
 /* IPAD MINI */
 @media (min-width: 768px) and (max-width: 1023.9px) {
-    .hero-text>h1 {
+    .heroText > h1 {
         font-size: 4em;
     }
 
-    .hero-text>p {
+    .heroText > p {
         font-size: 2.3em;
     }
 
-    .carousel-image {
+    .carouselImage {
         height: 450px;
     }
 }
 
 /* IPAD PRO */
 @media (min-width: 1024px) and (max-width: 1439.9px) {
-    .carousel-image {
+    .carouselImage {
         height: 500px;
     }
 }
 
 /* PORTATIL */
 @media (min-width: 1440px) and (max-width: 1919.9px) {
-    .carousel-image {
+    .carouselImage {
         height: 600px;
     }
 }
 
 /* FULL HD */
 @media (min-width: 1920px) {
-    .carousel-image {
+    .carouselImage {
         height: 700px;
     }
 }
@@ -375,12 +376,12 @@ footer a:hover {
     justify-content: center;
 }
 
-.navbar-nav .menu-item {
+.navbar-nav .menuItem {
     position: relative;
     cursor: pointer;
 }
 
-.navbar-nav .menu-item .wee {
+.navbar-nav .menuItem .wee {
     height: 2px;
     width: 100%;
     background-color: #FFD700;
@@ -391,34 +392,34 @@ footer a:hover {
     opacity: 0;
 }
 
-.navbar-nav .menu-item:hover .wee {
+.navbar-nav .menuItem:hover .wee {
     opacity: 1;
 }
 
-.navbar-nav .current-menu-item .wee {
+.navbar-nav .currentMenuItem .wee {
     opacity: 1;
 }
 
-nav.scrolled .navbar-nav .menu-item .wee {
+nav.scrolled .navbar-nav .menuItem .wee {
     background-color: #000000;
 }
 
-nav.scrolled .navbar-nav .current-menu-item .wee {
+nav.scrolled .navbar-nav .currentMenuItem .wee {
     opacity: 1;
 }
 
-nav.scrolled .navbar-nav .menu-item:hover .wee {
+nav.scrolled .navbar-nav .menuItem:hover .wee {
     opacity: 1;
 }
 
-.navbar-nav .menu-item .nav-link {
+.navbar-nav .menuItem .nav-link {
     transition: 0.75s;
 }
 /* galeria */
 .galeriaDeImagenes{
     margin-top: 120px;
 }
-.boton-categoria {
+.botonCategoria {
     border: 1px solid #FFD700;
     border-radius: 20px;
     padding: 5px 15px;
@@ -428,11 +429,11 @@ nav.scrolled .navbar-nav .menu-item:hover .wee {
     color: #FFD700;
     transition: background-color 0.3s, color 0.3s;
 }
-.boton-categoria.activo {
+.botonCategoria.activo {
     background-color: #FFD700;
     color: #121212;
 }
-.boton-categoria:hover {
+.botonCategoria:hover {
     background-color: #D4AF37;
     color: #ffffff;
 }
